--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,7 +1,14 @@
 server.port=8080
 
+# Servlet encoding configuration
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.servlet.encoding.force-request=true
+server.servlet.encoding.force-response=true
+
 # Docker network service names
-spring.datasource.url=jdbc:mysql://mysql-db:3306/trade?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/trade?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4&useUnicode=true&connectionCollation=utf8mb4_unicode_ci
+
 spring.datasource.username=root
 spring.datasource.password=Qsycl741
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -20,6 +27,8 @@ minio.accessKey=minioadmin
 minio.secretKey=minioadmin
 minio.bucketName=mall
 
+spring.elasticsearch.uris=http://elasticsearch:9200
+
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=lut.cn.c2cplatform.entity
 
@@ -28,7 +37,7 @@ management.endpoint.health.show-details=always
 
 spring.autoconfigure.exclude=org.springframework.boot.actuate.autoconfigure.metrics.SystemMetricsAutoConfiguration,org.springframework.boot.actuate.autoconfigure.metrics.web.tomcat.TomcatMetricsAutoConfiguration
 
-captcha.expiration=300
-captcha.width=110
-captcha.height=40
-captcha.store=redis
+#captcha.expiration=300
+#captcha.width=110
+#captcha.height=40
+#captcha.store=redis
