--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 # application.properties
 server.port=8080
 
+# HTTP????
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.servlet.encoding.force-request=true
+server.servlet.encoding.force-response=true
+
 # Local MySQL Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/trade?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/trade?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4&useUnicode=true&connectionCollation=utf8mb4_unicode_ci
 spring.datasource.username=root
 spring.datasource.password=Qsycl741
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
 
 # Local Redis
 spring.data.redis.host=localhost
@@ -23,6 +30,9 @@ minio.accessKey=minioadmin
 minio.secretKey=minioadmin
 minio.bucketName=mall
 
+# Elasticsearch
+spring.elasticsearch.uris=http://localhost:9200
+
 # MyBatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=lut.cn.c2cplatform.entity
@@ -34,7 +44,7 @@ management.endpoint.health.show-details=always
 spring.autoconfigure.exclude=org.springframework.boot.actuate.autoconfigure.metrics.SystemMetricsAutoConfiguration,org.springframework.boot.actuate.autoconfigure.metrics.web.tomcat.TomcatMetricsAutoConfiguration
 
 # Captcha
-captcha.store=memory
-captcha.expiration=300
-captcha.width=110
-captcha.height=40
+#captcha.store=memory
+#captcha.expiration=300
+#captcha.width=110
+#captcha.height=40
