--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -7,8 +7,7 @@ server.servlet.encoding.force-request=true
 server.servlet.encoding.force-response=true
 
 # Docker network service names
-spring.datasource.url=jdbc:mysql://localhost:3306/trade?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4&useUnicode=true&connectionCollation=utf8mb4_unicode_ci
-
+pring.datasource.url=jdbc:mysql://localhost:3306/trade?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4&useUnicode=true&connectionCollation=utf8mb4_unicode_ci&useServerPrepStmts=true&cachePrepStmts=true&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=Qsycl741
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
