--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,16 @@ server.servlet.encoding.force-request=true
 server.servlet.encoding.force-response=true
 
 # Local MySQL Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/trade?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4&useUnicode=true&connectionCollation=utf8mb4_unicode_ci
+spring.datasource.url=jdbc:mysql://localhost:3306/trade?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4&useUnicode=true&connectionCollation=utf8mb4_unicode_ci&useServerPrepStmts=true&cachePrepStmts=true&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=Qsycl741
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
+
+# MyBatis Configuration
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.default-fetch-size=100
+mybatis.configuration.default-statement-timeout=30
 
 # Local Redis
 spring.data.redis.host=localhost
