--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,16 +12,24 @@ server {
 
   # proxy API to backend service in docker-compose
   location /api/ {
-    proxy_pass http://springboot-app:8080/api/;
+    proxy_pass http://backend:8080/api/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_http_version 1.1;
+    proxy_set_header Connection "";
+
+    # 禁用缓存（特别是验证码等动态内容）
+    proxy_cache_bypass $http_pragma $http_authorization;
+    proxy_no_cache $http_pragma $http_authorization;
+    add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+    expires -1;
   }
 
   # proxy WebSocket (SockJS endpoint)
   location /ws/ {
-    proxy_pass http://springboot-app:8080/ws/;
+    proxy_pass http://backend:8080/ws/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
