--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.2.1",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "date-fns": "^4.1.0",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
