--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 # Docker Environment Configuration
 
+# Spring Configuration
+spring.main.allow-bean-definition-overriding=true
+
 # HTTP Configuration
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
