--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "sockjs-client": "^1.6.1",
+    "sweetalert2": "^11.26.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
